--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ margin: 0px 1px;
     padding: 0px 50px;
 }
     .header{
-        background: url(imagenes/piscina13.jpg);
+        background: url(/imagenes/piscina13.jpg);
         background-position: center;
         background-attachment: contain;
         background-size: cover;
