--- a/style.css
+++ b/style.css
@@ -11,6 +11,15 @@ display: flex;
 flex-flow: column wrap;
 margin: 0px 1px;
 }
+.temp{
+  background-color: #cccccc;
+    display: flex;
+    font-size: 20px;
+}
+.temp a{
+  font-size: 20px;
+  display: flex;
+}
 .margen-interno{
     padding: 0px 50px;
 }
@@ -203,6 +212,10 @@ margin: 0px 1px;
     }
 }
 @media all and (max-width:1150px){
+    .temp{
+      font-size: 15px;
+
+    }
     .section{
         flex-direction: column;
     }
@@ -228,6 +241,12 @@ margin: 0px 1px;
         width: 170px;
     }
 }
+@media all and (max-width:920px) {
+  .temp{
+  display: flex;
+flex-flow: column wrap;
+  }
+}
 @media all and (max-width:801px){
     .texto-principal{
             height: 120px;
@@ -252,6 +271,10 @@ margin: 0px 1px;
         }
 }
 @media all and (max-width:680px){
+  .temp a{
+    font-size: 16px;
+    display: flex;
+  }
     .menu{
         margin-top: 10px;    
     }
@@ -282,6 +305,10 @@ margin: 0px 1px;
     }
 }
 @media all and (max-width:500px){
+  .temp a{
+    font-size: 13px;
+    display: flex;
+  }
     .texto-principal{
         height: 120px;
     }
@@ -292,7 +319,17 @@ margin: 0px 1px;
         font-size: 14px;
     }
 }
-@media all and (max-width:410px){
+  @media all and (max-width:420px){
+    .temp{
+      flex-direction: column;
+    }
+    .temp a{
+      font-size: 11px;
+      display: flex;
+    }
+    .margen-interno{
+      padding: 0px 0px;
+  }
     .texto-principal{
         height: 170px;
     }
