--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ margin: 0px 1px;
 }
     .texto-pagina{
         margin: 30px 160px;
-        text-align: justify;
+        text-align: initial;
         font-size: 23px;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
