--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ margin: 0px 1px;
         .pie{
             background-color: rgb(219, 182, 18);
             width: auto;
-            margin-top: 12px;
+            margin-top: 2px;
         }
         .pie a{
             color: white;
@@ -182,6 +182,11 @@ margin: 0px 1px;
             text-transform: uppercase;
             padding: 0px 10px;
             letter-spacing: 2px;
+        }
+        .pie p{
+            color: white;
+            font-size: 16px;
+            background-color: green;
         }
 .container{
     margin: 6px 0px;
