--- a/style.css
+++ b/style.css
@@ -23,6 +23,14 @@ margin: 0px 1px;
 .margen-interno{
     padding: 0px 50px;
 }
+.img-post {
+    display: flex;
+    flex-flow: column nowrap;
+}
+    .img-post .img{
+        padding: 10px;
+        height: 300px;
+    }
     .header{
         background: url(imagenes/piscina13.jpg);
         background-position: center;
