--- a/style.css
+++ b/style.css
@@ -26,10 +26,12 @@ margin: 0px 1px;
 .img-post {
     display: flex;
     flex-flow: column nowrap;
+    align-items: center;
 }
     .img-post .img{
         padding: 10px;
-        height: 300px;
+        height: 400px;
+        width: 70%;
     }
     .header{
         background: url(imagenes/piscina13.jpg);
@@ -316,6 +318,9 @@ flex-flow: column wrap;
     }
     .texto-principal h1{
         font-size: 20px;
+    }
+    .img-post .img{
+        width: 100%;
     }
 }
 @media all and (max-width:640px){
