--- a/style.css
+++ b/style.css
@@ -193,6 +193,19 @@ margin: 0px 1px;
                 margin: 9px 20px 50px 30px;
                 border: 6px solid rgb(233, 202, 109);
             }
+            .publicidad-1{
+                background-color: gray;
+                margin: 9px 20px 50px 30px;
+                border: 6px solid rgb(233, 202, 109);
+            }
+            .publicidad-2{
+                background-color: blueviolet;
+                text-align: center;
+            }
+            .blanco-negro{
+                color: white;
+                background-color: black;
+            }
     .footer{
         background-color: white;
         width: 100%;
@@ -285,6 +298,13 @@ margin: 0px 1px;
   .temp{
   display: flex;
 flex-flow: column wrap;
+  }
+  .aside{
+    flex-direction: column;
+    align-items: center;
+  }
+  .publicidad{
+    width: 50%;
   }
 }
 @media all and (max-width:801px){
@@ -416,6 +436,9 @@ flex-flow: column wrap;
     }
     .publicidad{
         max-width: 200px;
+    }
+    .publicidad-2{
+        font-size: 80%;
     }
     .mobile {
         font-size: 14px;
