--- a/style.css
+++ b/style.css
@@ -435,7 +435,7 @@ flex-flow: column wrap;
         margin: auto;
     }
     .publicidad{
-        max-width: auto
+        max-width: auto;
     }
     .publicidad-2{
         font-size: 80%;
